# hasher

./: .gitignore  Cargo.toml
src/: cli.rs  dashboard.rs  hash.rs  helpers.rs  main.rs
tests/: test.ps1  test.sh
