[package]
name = "hasher"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
crossbeam-channel = "0.5"
chrono = "0.4"
clap = { version = "4.5.59", features = ["derive"] }
sha2 = "0.10.9"
sha1 = "0.10.6"
md5 = "0.8.0"
is_elevated = "0.1.2"
lazy_static = "1.5.0"
whoami = "2.1.1"
rayon = "1.12.0"
